cln: fix update formatting for html and css files

--- a/climbing.html
+++ b/climbing.html
@@ -1,4 +1,5 @@
-<html style="background-color:#ffffff;">
+<!DOCTYPE html>
+<html>
 <head>
   <meta name="description" content="Climbing - Ike Griss Salas">
   <title>Climbing - Ike Griss Salas</title>
@@ -25,8 +26,9 @@
             <h1 style="font-size:50px; font-weight:normal;">Climbing</h1>
             <p style="font-size:16px;">
               Some climbs I have done on <em> 
-                <a href="https://www.mountainproject.com/user/201838571/ike-griss-salas" target="_blank" rel="noopener noreferrer">
-                  Mountain Project.
+                <a href="https://www.mountainproject.com/user/201838571/ike-griss-salas"
+                   target="_blank" rel="noopener noreferrer">
+                   Mountain Project.
                 </a>
               </em>
             </p>
@@ -46,37 +48,49 @@
 
         <!-- Vantage - Cooper and Julia -->
          <figure class="album-item" onclick="toggleGallery('vantageCooperJulia')">
-          <img loading="lazy"  src="graphics/climbing/vant_coop_julia/ike.jpg" alt="vantage_cj">
+          <img loading="lazy"  
+               src="graphics/climbing/vant_coop_julia/ike.jpg" 
+               alt="vantage_cj">
           <figcaption>I don't remember right now, Vantage. March 26, 2025</figcaption>
          </figure>
 
         <!-- Vantage - Kate and Heidi -->
         <figure class="album-item" onclick="toggleGallery('vantageHeidiKate')">
-          <img loading="lazy" src="graphics/climbing/vantage_heidi_kate/group_sunshine.jpg" alt="vantage_hk">
+          <img loading="lazy" 
+               src="graphics/climbing/vantage_heidi_kate/group_sunshine.jpg" 
+              alt="vantage_hk">
           <figcaption>Entrance to Sunshine Wall, Vantage. March 24, 2025.</figcaption>
         </figure>
         
         <!-- ShangriLa -->
         <figure class="album-item" onclick="toggleGallery('shangriLaGallery')">
-          <img loading="lazy" src="graphics/climbing/Shangri-La/Shangri-La_Crouching_Tiger.jpg" alt="Shangri-La">
+          <img loading="lazy" 
+               src="graphics/climbing/Shangri-La/Shangri-La_Crouching_Tiger.jpg" 
+               alt="Shangri-La">
           <figcaption>Shangri-La, Crouching Tiger 5.10c. September 28, 2024.</figcaption>
         </figure>
 
         <!-- Bills Wall -->
         <figure class="album-item" onclick="toggleGallery('billsWallGallery')">
-          <img loading="lazy" src="graphics/climbing/sunshine/Bills-Wall_Kissing_Cousins.jpg" alt="Bill's Wall">
+          <img loading="lazy" 
+               src="graphics/climbing/sunshine/Bills-Wall_Kissing_Cousins.jpg" 
+               alt="Bill's Wall">
           <figcaption>Bill's Wall, Kissing Cousins 5.10b. October 26, 2024.</figcaption>
         </figure>
 
         <!-- Hard Rock -->
         <figure class="album-item" onclick="toggleGallery('hardRockGallery')">
-          <img loading="lazy" src="graphics/climbing/hard-rock/Hard_rock_muffin.jpg" alt="Hard Rock">
+          <img loading="lazy" 
+               src="graphics/climbing/hard-rock/Hard_rock_muffin.jpg" 
+              alt="Hard Rock">
           <figcaption>Hard Rock, American Fork, Tasty Muffins. September 6, 2024.</figcaption>
         </figure>
 
         <!-- Indian Creek -->
         <figure class="album-item" onclick="toggleGallery('indianCreekGallery')">
-          <img loading="lazy" src="graphics/climbing/indian-creek/Indian-creek_sparkling_gefilte_fish.jpg" alt="Indian Creek">
+          <img loading="lazy" 
+               src="graphics/climbing/indian-creek/Indian-creek_sparkling_gefilte_fish.jpg" 
+               alt="Indian Creek">
           <figcaption>Indian Creek, Sparkling Gefilte Fish 5.10c, November 8, 2022.</figcaption>
         </figure>
 
@@ -98,60 +112,90 @@
 
     <div class="hidden-gallery" id="shangriLaGallery">
       <figure>
-        <img loading="lazy" src="graphics/climbing/Shangri-La/Shangri-La_Crouching_Tiger.jpg" alt="Shangri-La Image 1">
+        <img loading="lazy" 
+             src="graphics/climbing/Shangri-La/Shangri-La_Crouching_Tiger.jpg"
+             alt="Shangri-La Image 1">
         <figcaption>Shangri-La, Second View. September 29, 2024.</figcaption>
       </figure>
       <figure>
-        <img loading="lazy" src="graphics/climbing/Shangri-La/damien.jpg" alt="Shangri-La Image 2">
+        <img loading="lazy" 
+             src="graphics/climbing/Shangri-La/damien.jpg" 
+             alt="Shangri-La Image 2">
         <figcaption>Shangri-La, Top Out. September 29, 2024.</figcaption>
       </figure>
       <figure>
-        <img loading="lazy" src="graphics/climbing/Shangri-La/tree.jpg" alt="Shangri-La Image 2">
+        <img loading="lazy" 
+             src="graphics/climbing/Shangri-La/tree.jpg" 
+             alt="Shangri-La Image 2">
         <figcaption>Shangri-La, Top Out. September 29, 2024.</figcaption>
       </figure>
       <figure>
-        <img loading="lazy" src="graphics/climbing/Shangri-La/julia.jpg" alt="Shangri-La Image 2">
+        <img loading="lazy" 
+             src="graphics/climbing/Shangri-La/julia.jpg" 
+             alt="Shangri-La Image 2">
         <figcaption>Shangri-La, Top Out. September 29, 2024.</figcaption>
       </figure>
     </div>
 
     <div class="hidden-gallery" id="vantageHeidiKate">
       <figure>
-        <img loading="lazy" src="graphics/climbing/vantage_heidi_kate/group_sunshine.jpg" alt="sunshine">
+        <img loading="lazy" 
+             src="graphics/climbing/vantage_heidi_kate/group_sunshine.jpg"
+             alt="sunshine">
       </figure>
       <figure>
-        <img loading="lazy" src="graphics/climbing/vantage_heidi_kate/kate_belay_ike.jpg" alt="kate_belay_ike">
+        <img loading="lazy" 
+             src="graphics/climbing/vantage_heidi_kate/kate_belay_ike.jpg" 
+             alt="kate_belay_ike">
       </figure>
       <figure>
-        <img loading="lazy" src="graphics/climbing/vantage_heidi_kate/kate_belay_heidi.jpg" alt="kate_belay_heidi">
+        <img loading="lazy" 
+             src="graphics/climbing/vantage_heidi_kate/kate_belay_heidi.jpg" 
+             alt="kate_belay_heidi">
       </figure>
       <figure>
-        <img loading="lazy" src="graphics/climbing/vantage_heidi_kate/group_pitch1.jpg" alt="group_pitch1">
+        <img loading="lazy" 
+             src="graphics/climbing/vantage_heidi_kate/group_pitch1.jpg" 
+             alt="group_pitch1">
       </figure>
       <figure>
-        <img loading="lazy" src="graphics/climbing/vantage_heidi_kate/beloggles.jpg" alt="beloggles">
+        <img loading="lazy" 
+             src="graphics/climbing/vantage_heidi_kate/beloggles.jpg" 
+             alt="beloggles">
       </figure>
       <figure>
-        <img loading="lazy" src="graphics/climbing/vantage_heidi_kate/kate_heidi.jpg" alt="kate_heidi">
+        <img loading="lazy" 
+             src="graphics/climbing/vantage_heidi_kate/kate_heidi.jpg" 
+             alt="kate_heidi">
       </figure>
       <figure>
-        <img loading="lazy" src="graphics/climbing/vantage_heidi_kate/good_doggo.jpg" alt="good_doggo">
+        <img loading="lazy" 
+             src="graphics/climbing/vantage_heidi_kate/good_doggo.jpg" 
+             alt="good_doggo">
       </figure>
       <figure>
-        <img loading="lazy" src="graphics/climbing/vantage_heidi_kate/kate_belay.jpg" alt="kate_belay">
+        <img loading="lazy" 
+             src="graphics/climbing/vantage_heidi_kate/kate_belay.jpg" 
+             alt="kate_belay">
       </figure>
     </div>
     <div class="hidden-gallery" id="billsWallGallery">
       <figure>
-        <img loading="lazy" src="graphics/climbing/sunshine/Bills-Wall_Kissing_Cousins.jpg" alt="Bill's Wall Image 1">
+        <img loading="lazy" 
+             src="graphics/climbing/sunshine/Bills-Wall_Kissing_Cousins.jpg" 
+             alt="Bill's Wall Image 1">
         <figcaption>Bill's Wall, Second View. October 26, 2024.</figcaption>
       </figure>
       <figure>
-        <img loading="lazy" src="graphics/climbing/sunshine/cooper_julia.jpg" alt="Bill's Wall Image 3">
+        <img loading="lazy" 
+             src="graphics/climbing/sunshine/cooper_julia.jpg" 
+             alt="Bill's Wall Image 3">
         <figcaption>Bill's Wall, Top Out. October 26, 2022024.</figcaption>
       </figure>
       <figure>
-        <img loading="lazy" src="graphics/climbing/sunshine/selfie.jpg" alt="Bill's Wall Image 4">
+        <img loading="lazy" 
+             src="graphics/climbing/sunshine/selfie.jpg" 
+             alt="Bill's Wall Image 4">
         <figcaption>Bill's Wall, Top Out. October 26, 2022024.</figcaption>
       </figure>
     </div>
@@ -185,11 +229,15 @@
 
     <div class="hidden-gallery" id="indianCreekGallery">
       <figure>
-        <img loading="lazy" src="graphics/climbing/indian-creek/Indian-creek_sparkling_gefilte_fish.jpg" alt="Indian Creek Image 1">
+        <img loading="lazy" 
+             src="graphics/climbing/indian-creek/Indian-creek_sparkling_gefilte_fish.jpg" 
+             alt="Indian Creek Image 1">
         <figcaption>Indian Creek, Sparkling Gefilte Fish 5.10c. November 8, 2022.</figcaption>
       </figure>
       <figure>
-        <img loading="lazy" src="graphics/climbing/indian-creek/lunar_ecplise.jpg" alt="Indian Creek Image 2">
+        <img loading="lazy" 
+             src="graphics/climbing/indian-creek/lunar_ecplise.jpg" 
+             alt="Indian Creek Image 2">
         <figcaption>Indian Creek, Lunar Eclipse, November 8, 2022.</figcaption>
       </figure>
     </div>
