--- a/research.html
+++ b/research.html
@@ -1,10 +1,11 @@
-<html style="background-color:#ffffff;">
+<!DOCTYPE html>
+<html>
 <head>
-<meta name="description" content="Research - Ike Griss Salas">
-<title>Research - Ike Griss Salas</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<link rel="stylesheet" href="ike_styles.css" type="text/css" media="all">
+  <meta name="description" content="Research - Ike Griss Salas">
+  <title>Research - Ike Griss Salas</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <link rel="stylesheet" href="ike_styles.css" type="text/css" media="all">
 </head>
 <body style="max-width: 1200px;">
 
@@ -32,8 +33,8 @@
   <section style="margin: 20px;">
     <h2 style="font-size:30px;">Overview</h2>
     <p style="font-size:16px;">
-      <!-- Add a brief introduction about your research focus, areas of interest, and overarching goals. -->
-      <em> My research focuses on machine learning, optimization, and their applications in environmental science.</em>
+      <em> My research focuses on machine learning, optimization, and their applications
+           in environmental science.</em>
     </p>
   </section>
 
@@ -41,19 +42,18 @@
   <section style="margin: 20px;">
     <h2 style="font-size:30px;">Research Projects</h2>
     <ul style="font-size:16px; line-height:1.8;">
-      <!-- Add project titles and descriptions -->
       <li>
         <strong>Reduced Order Modeling for Plume Dynamics</strong><br>
-        <p style="margin-left:20px;"> Developing fast reduced order modelings for characterizing plume dynamics directly from video data. </p>
+        <p style="margin-left:20px;"> Developing fast reduced order modelings for
+           characterizing plume dynamics directly from video data. </p>
       </li>
       <li>
         <strong>Joint SINDy</strong><br>
-        <p style="margin-left:20px;"> Developing a new model learning architecture inspired by the widely used (two-step) <i>Sparse Identification of Nonlinear Dynamics</i> (SINDy) that learns a model in scenarios of extremely scarce or noisy data measurements. </p>
+        <p style="margin-left:20px;"> Developing a new model learning architecture
+           inspired by the widely used (two-step) <i>Sparse Identification of Nonlinear
+           Dynamics</i> (SINDy) that learns a model in scenarios of extremely scarce or
+          noisy data measurements. </p>
       </li>
-      <!-- <li>
-        <strong>Project 3: Title</strong><br>
-        <p style="margin-left:20px;">A brief description of the project, its goals, and any results or findings.</p>
-      </li> -->
     </ul>
   </section>
 
@@ -61,31 +61,26 @@
   <section style="margin: 20px;">
     <h2 style="font-size:30px;">Publications</h2>
     <ul style="font-size:16px; line-height:1.8;">
-      <!-- Add a list of publications -->
       <li>
-        <strong>Coarse Graining and Reduced Order Models for Plume Ejection Dynamics</strong><br>
+        <strong>
+          Coarse Graining and Reduced Order Models for Plume Ejection Dynamics
+        </strong><br>
         Ike Griss Salas, Megan R. Ebers, Jake Stevens-Haas, J. Nathan Kutz<br>
         <em>arXiv preprint arXiv:2503.04690 (2025)</em><br>
-        <a href="https://arxiv.org/abs/2503.04690" target="_blank" rel="noopener noreferrer">Read on arXiv</a>
+        <a href="https://arxiv.org/abs/2503.04690" 
+           target="_blank" rel="noopener noreferrer">Read on arXiv</a>
       </li>
-      
-      <!-- <li>
-        <strong>Publication 2:</strong> Author(s), Title, Journal/Conference, Year.
-      </li>
-      <li>
-        <strong>Publication 3:</strong> Author(s), Title, Journal/Conference, Year.
-      </li>
-    </ul> -->
+    </ul>
   </section>
 
   <!-- Contact Information -->
   <section style="margin: 20px;">
     <h2 style="font-size:30px;">Contact</h2>
     <p style="font-size:16px;">
-      <!-- Add your preferred contact details -->
-      <!-- Email: <a href="mailto:your_email@example.com">your_email@example.com</a><br> -->
-      LinkedIn: <a href="linkedin.com/in/ike-griss-salas-46a32016a" target="_blank">linkedin.com/in/ike-griss-salas</a><br>
-      GitHub: <a href="https://github.com/MalachiteWind" target="_blank">https://github.com/MalachiteWind</a>
+      LinkedIn: <a href="https://linkedin.com/in/ike-griss-salas-46a32016a"
+                   target="_blank">linkedin.com/in/ike-griss-salas</a><br>
+      GitHub: <a href="https://github.com/MalachiteWind" 
+                 target="_blank">https://github.com/MalachiteWind</a>
     </p>
   </section>
 
