formatting: update navbar

--- a/climbing.html
+++ b/climbing.html
@@ -13,9 +13,9 @@
   <div id="outer">
     <div id="menu">
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="./research.html">Research</a></li>
-        <li><a href="./climbing.html" class="active">Climbing</a></li>
+        <li><a href="index.html">home</a></li>
+        <li><a href="./research.html">research</a></li>
+        <li><a href="./climbing.html" class="active">climbing</a></li>
       </ul>
     </div>
 
