--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <div id="outer">
     <nav id="menu">
       <ul>
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="research.html">Research</a></li>
-        <li><a href="climbing.html">Climbing</a></li>
+        <li><a href="index.html" class="active">home</a></li>
+        <li><a href="research.html">research</a></li>
+        <li><a href="climbing.html">climbing</a></li>
       </ul>
     </nav>
   </div>
