--- a/research.html
+++ b/research.html
@@ -12,9 +12,9 @@
   <div id="outer">
     <div id="menu">
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="./research.html" class="active">Research</a></li>
-        <li><a href="./climbing.html">Climbing</a></li>
+        <li><a href="index.html">home</a></li>
+        <li><a href="./research.html" class="active">research</a></li>
+        <li><a href="./climbing.html">climbing</a></li>
       </ul>
     </div>
   </div>
