--- a/climbing.html
+++ b/climbing.html
@@ -1,102 +1,80 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
   <meta name="description" content="Climbing - Ike Griss Salas">
-  <title>Climbing - Ike Griss Salas</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <title>Climbing - Ike Griss Salas</title>
   <link rel="stylesheet" href="ike_styles.css" type="text/css" media="all">
 </head>
 
-<body style="margin-top: 0px;">
+<!-- increase max-width manually here -->
+<body style="max-width: 1500px;">
 
   <div id="outer">
-    <div id="menu">
+    <nav id="menu">
       <ul>
         <li><a href="index.html">home</a></li>
-        <li><a href="./research.html">research</a></li>
-        <li><a href="./climbing.html" class="active">climbing</a></li>
+        <li><a href="research.html">research</a></li>
+        <li><a href="climbing.html" class="active">climbing</a></li>
       </ul>
-    </div>
+    </nav>
+  </div>
 
-    <center>
-      <table width="80%" border="0" cellspacing="3" cellpadding="3">
-        <tr>
-          <td align="center" bgcolor="white">
-            <h1 style="font-size:50px; font-weight:normal;">Climbing</h1>
-            <p style="font-size:16px;">
-              Some climbs I have done on <em> 
-                <a href="https://www.mountainproject.com/user/201838571/ike-griss-salas"
-                   target="_blank" rel="noopener noreferrer">
-                   Mountain Project.
-                </a>
-              </em>
-            </p>
-          </td>
-        </tr>
-      </table>
-    </center>
+  <main>
+    <section style="text-align: center; margin-top: 20px;">
+      <h1 style="font-size: 50px; font-weight: normal;">Climbing</h1>
+      <p style="font-size: 16px;">
+        Some climbs I have done on <em>
+          <a href="https://www.mountainproject.com/user/201838571/ike-griss-salas"
+             target="_blank" rel="noopener noreferrer">
+             Mountain Project
+          </a>
+        </em>.
+      </p>
+    </section>
 
+    <section>
     <div class="gallery-container">
-      <h2 style="font-size:40px; font-weight:normal; margin-bottom:20px;">Gallery</h2>
-        <!-- <p style="font-size:16px; text-align:center;">
-          Some highlighted albums of my climbs.
-        </p> -->
-
-      <!-- Gallery Section -->
+      <h2 style="font-size: 30px;">Gallery</h2>
       <div class="album-grid">
-
         <!-- Vantage - Cooper and Julia -->
-         <figure class="album-item" onclick="toggleGallery('vantageCooperJulia')">
-          <img loading="lazy"  
-               src="graphics/climbing/vant_coop_julia/ike.jpg" 
-               alt="vantage_cj">
-          <figcaption>I don't remember right now, Vantage. March 26, 2025</figcaption>
-         </figure>
+        <figure class="album-item" onclick="toggleGallery('vantageCooperJulia')">
+          <img loading="lazy" src="graphics/climbing/vant_coop_julia/ike.jpg" alt="vantage_cj">
+          <figcaption>Zig Zag, Mr. Nice Guy 5.10a. March 26, 2025</figcaption>
+        </figure>
 
         <!-- Vantage - Kate and Heidi -->
         <figure class="album-item" onclick="toggleGallery('vantageHeidiKate')">
-          <img loading="lazy" 
-               src="graphics/climbing/vantage_heidi_kate/group_sunshine.jpg" 
-              alt="vantage_hk">
+          <img loading="lazy" src="graphics/climbing/vantage_heidi_kate/group_sunshine.jpg" alt="vantage_hk">
           <figcaption>Entrance to Sunshine Wall, Vantage. March 24, 2025.</figcaption>
         </figure>
-        
+
         <!-- ShangriLa -->
         <figure class="album-item" onclick="toggleGallery('shangriLaGallery')">
-          <img loading="lazy" 
-               src="graphics/climbing/Shangri-La/Shangri-La_Crouching_Tiger.jpg" 
-               alt="Shangri-La">
+          <img loading="lazy" src="graphics/climbing/Shangri-La/Shangri-La_Crouching_Tiger.jpg" alt="Shangri-La">
           <figcaption>Shangri-La, Crouching Tiger 5.10c. September 28, 2024.</figcaption>
         </figure>
 
         <!-- Bills Wall -->
         <figure class="album-item" onclick="toggleGallery('billsWallGallery')">
-          <img loading="lazy" 
-               src="graphics/climbing/sunshine/Bills-Wall_Kissing_Cousins.jpg" 
-               alt="Bill's Wall">
+          <img loading="lazy" src="graphics/climbing/sunshine/Bills-Wall_Kissing_Cousins.jpg" alt="Bill's Wall">
           <figcaption>Bill's Wall, Kissing Cousins 5.10b. October 26, 2024.</figcaption>
         </figure>
 
         <!-- Hard Rock -->
         <figure class="album-item" onclick="toggleGallery('hardRockGallery')">
-          <img loading="lazy" 
-               src="graphics/climbing/hard-rock/Hard_rock_muffin.jpg" 
-              alt="Hard Rock">
+          <img loading="lazy" src="graphics/climbing/hard-rock/Hard_rock_muffin.jpg" alt="Hard Rock">
           <figcaption>Hard Rock, American Fork, Tasty Muffins. September 6, 2024.</figcaption>
         </figure>
 
         <!-- Indian Creek -->
         <figure class="album-item" onclick="toggleGallery('indianCreekGallery')">
-          <img loading="lazy" 
-               src="graphics/climbing/indian-creek/Indian-creek_sparkling_gefilte_fish.jpg" 
-               alt="Indian Creek">
+          <img loading="lazy" src="graphics/climbing/indian-creek/Indian-creek_sparkling_gefilte_fish.jpg" alt="Indian Creek">
           <figcaption>Indian Creek, Sparkling Gefilte Fish 5.10c, November 8, 2022.</figcaption>
         </figure>
-
       </div>
     </div>
-
     <!-- Hidden Galleries for Each Album -->
     <div class="hidden-gallery", id="vantageCooperJulia">
       <figure>
@@ -241,9 +219,9 @@
         <figcaption>Indian Creek, Lunar Eclipse, November 8, 2022.</figcaption>
       </figure>
     </div>
+    </section>
 
-    <!-- Additional galleries can be added below -->
-  </div>
+  </main>
 
   <script>
     // Function to toggle visibility of the gallery
@@ -256,5 +234,6 @@
       }
     }
   </script>
+
 </body>
 </html>
