--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <link rel="stylesheet" href="ike_styles.css" type="text/css" media="all">
 </head>
 
-<body style="max-width: 1200px; margin: 0 auto;">
-
+<body>
   <div id="outer">
     <nav id="menu">
       <ul>
