--- a/research.html
+++ b/research.html
@@ -1,88 +1,81 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
   <meta name="description" content="Research - Ike Griss Salas">
-  <title>Research - Ike Griss Salas</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <title>Research - Ike Griss Salas</title>
   <link rel="stylesheet" href="ike_styles.css" type="text/css" media="all">
 </head>
-<body style="max-width: 1200px;">
 
+<body>
   <div id="outer">
-    <div id="menu">
+    <nav id="menu">
       <ul>
         <li><a href="index.html">home</a></li>
-        <li><a href="./research.html" class="active">research</a></li>
-        <li><a href="./climbing.html">climbing</a></li>
+        <li><a href="research.html" class="active">research</a></li>
+        <li><a href="climbing.html">climbing</a></li>
       </ul>
-    </div>
+    </nav>
   </div>
 
-  <center>
-    <table width="80%" border="0" cellspacing="3" cellpadding="3">
-      <tr>
-        <td align="center" bgcolor="white">
-          <h1 style="font-size:50px; font-weight:normal;">Research</h1>
-        </td>
-      </tr>
-    </table>
-  </center>
+  <main>
+    <section style="text-align: center; margin-top: 20px;">
+      <h1 style="font-size: 50px; font-weight: normal;">Research</h1>
+    </section>
 
-  <!-- Research Overview -->
-  <section style="margin: 20px;">
-    <h2 style="font-size:30px;">Overview</h2>
-    <p style="font-size:16px;">
-      <em> My research focuses on machine learning, optimization, and their applications
-           in environmental science.</em>
-    </p>
-  </section>
+    <section style="margin: 20px;">
+      <h2 style="font-size: 30px;">Overview</h2>
+      <p style="font-size: 16px;">
+        <em>My research focuses on machine learning, optimization, and their applications in environmental science.</em>
+      </p>
+    </section>
 
-  <!-- Research Projects -->
-  <section style="margin: 20px;">
-    <h2 style="font-size:30px;">Research Projects</h2>
-    <ul style="font-size:16px; line-height:1.8;">
-      <li>
-        <strong>Reduced Order Modeling for Plume Dynamics</strong><br>
-        <p style="margin-left:20px;"> Developing fast reduced order modelings for
-           characterizing plume dynamics directly from video data. </p>
-      </li>
-      <li>
-        <strong>Joint SINDy</strong><br>
-        <p style="margin-left:20px;"> Developing a new model learning architecture
-           inspired by the widely used (two-step) <i>Sparse Identification of Nonlinear
-           Dynamics</i> (SINDy) that learns a model in scenarios of extremely scarce or
-          noisy data measurements. </p>
-      </li>
-    </ul>
-  </section>
+    <section style="margin: 20px;">
+      <h2 style="font-size: 30px;">Research Projects</h2>
+      <ul style="font-size: 16px; line-height: 1.8;">
+        <li>
+          <strong>Reduced Order Modeling for Plume Dynamics</strong><br>
+          <p style="margin-left: 20px;">Developing fast reduced order modelings for characterizing plume dynamics directly from video data.</p>
+        </li>
+        <li>
+          <strong>Joint SINDy</strong><br>
+          <p style="margin-left: 20px;">Developing a new model learning architecture inspired by the widely used (two-step) <i>Sparse Identification of Nonlinear Dynamics</i> (SINDy) that learns a model in scenarios of extremely scarce or noisy data measurements.</p>
+        </li>
+      </ul>
+    </section>
 
-  <!-- Publications -->
-  <section style="margin: 20px;">
-    <h2 style="font-size:30px;">Publications</h2>
-    <ul style="font-size:16px; line-height:1.8;">
-      <li>
-        <strong>
-          Coarse Graining and Reduced Order Models for Plume Ejection Dynamics
-        </strong><br>
-        Ike Griss Salas, Megan R. Ebers, Jake Stevens-Haas, J. Nathan Kutz<br>
-        <em>arXiv preprint arXiv:2503.04690 (2025)</em><br>
-        <a href="https://arxiv.org/abs/2503.04690" 
-           target="_blank" rel="noopener noreferrer">Read on arXiv</a>
-      </li>
-    </ul>
-  </section>
+    <section style="margin: 20px;">
+      <h2 style="font-size: 30px;">Publications</h2>
+      <ul style="font-size: 16px; line-height: 1.8;">
+        <li>
+          <strong>Coarse Graining and Reduced Order Models for Plume Ejection Dynamics</strong><br>
+          Ike Griss Salas, Megan R. Ebers, Jake Stevens-Haas, J. Nathan Kutz<br>
+          <em>arXiv preprint arXiv:2503.04690 (2025)</em><br>
+          <a href="https://arxiv.org/abs/2503.04690" target="_blank" rel="noopener noreferrer">Read on arXiv</a>
+        </li>
+      </ul>
+    </section>
 
-  <!-- Contact Information -->
-  <section style="margin: 20px;">
-    <h2 style="font-size:30px;">Contact</h2>
-    <p style="font-size:16px;">
-      LinkedIn: <a href="https://linkedin.com/in/ike-griss-salas-46a32016a"
-                   target="_blank">linkedin.com/in/ike-griss-salas</a><br>
-      GitHub: <a href="https://github.com/MalachiteWind" 
-                 target="_blank">https://github.com/MalachiteWind</a>
-    </p>
-  </section>
+    <section style="margin: 20px;">
+      <h2 style="font-size: 30px;">Contact</h2>
+      <p style="font-size: 16px;">
+        LinkedIn: <a href="https://linkedin.com/in/ike-griss-salas-46a32016a" target="_blank">linkedin.com/in/ike-griss-salas</a><br>
+        GitHub: <a href="https://github.com/MalachiteWind" target="_blank">https://github.com/MalachiteWind</a>
+      </p>
+    </section>
+  </main>
+
+  <script>
+    (function () {
+      const user = "grisal";
+      const domain = "uw.edu";
+      const email = `${user}@${domain}`;
+      const el = document.getElementById("email-link");
+      el.href = `mailto:${email}`;
+      el.textContent = email;
+    })();
+  </script>
 
 </body>
 </html>
