restructure folders for pretty url

--- a/research/index.html
+++ b/research/index.html
@@ -5,16 +5,16 @@
   <meta name="description" content="Research - Ike Griss Salas">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Research - Ike Griss Salas</title>
-  <link rel="stylesheet" href="ike_styles.css" type="text/css" media="all">
+  <link rel="stylesheet" href="/ike_styles.css" type="text/css" media="all">
 </head>
 
 <body style="max-width: 2000px;">
   <div id="outer">
     <nav id="menu">
       <ul>
-        <li><a href="index.html">home</a></li>
-        <li><a href="research.html" class="active">research</a></li>
-        <li><a href="climbing.html">climbing</a></li>
+        <li><a href="/">home</a></li>
+        <li><a href="/research/" class="active">research</a></li>
+        <li><a href="/climbing/">climbing</a></li>
       </ul>
     </nav>
   </div>
