--- a/climbing/index.html
+++ b/climbing/index.html
@@ -5,7 +5,7 @@
   <meta name="description" content="Climbing - Ike Griss Salas">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Climbing - Ike Griss Salas</title>
-  <link rel="stylesheet" href="ike_styles.css" type="text/css" media="all">
+  <link rel="stylesheet" href="/ike_styles.css" type="text/css" media="all">
 </head>
 
 <!-- increase max-width manually here -->
@@ -14,9 +14,9 @@
   <div id="outer">
     <nav id="menu">
       <ul>
-        <li><a href="index.html">home</a></li>
-        <li><a href="research.html">research</a></li>
-        <li><a href="climbing.html" class="active">climbing</a></li>
+        <li><a href="/">home</a></li>
+        <li><a href="/research/">research</a></li>
+        <li><a href="/climbing/" class="active">climbing</a></li>
       </ul>
     </nav>
   </div>
@@ -41,37 +41,37 @@
       <div class="album-grid">
         <!-- Vantage - Cooper and Julia -->
         <figure class="album-item" onclick="toggleGallery('vantageCooperJulia')">
-          <img loading="lazy" src="graphics/climbing/vant_coop_julia/ike.jpg" alt="vantage_cj">
+          <img loading="lazy" src="/graphics//climbing/vant_coop_julia/ike.jpg" alt="vantage_cj">
           <figcaption>Zig Zag, Mr. Nice Guy 5.10a. March 26, 2025</figcaption>
         </figure>
 
         <!-- Vantage - Kate and Heidi -->
         <figure class="album-item" onclick="toggleGallery('vantageHeidiKate')">
-          <img loading="lazy" src="graphics/climbing/vantage_heidi_kate/group_sunshine.jpg" alt="vantage_hk">
+          <img loading="lazy" src="/graphics//climbing/vantage_heidi_kate/group_sunshine.jpg" alt="vantage_hk">
           <figcaption>Entrance to Sunshine Wall, Vantage. March 24, 2025.</figcaption>
         </figure>
 
         <!-- ShangriLa -->
         <figure class="album-item" onclick="toggleGallery('shangriLaGallery')">
-          <img loading="lazy" src="graphics/climbing/Shangri-La/Shangri-La_Crouching_Tiger.jpg" alt="Shangri-La">
+          <img loading="lazy" src="/graphics//climbing/Shangri-La/Shangri-La_Crouching_Tiger.jpg" alt="Shangri-La">
           <figcaption>Shangri-La, Crouching Tiger 5.10c. September 28, 2024.</figcaption>
         </figure>
 
         <!-- Bills Wall -->
         <figure class="album-item" onclick="toggleGallery('billsWallGallery')">
-          <img loading="lazy" src="graphics/climbing/sunshine/Bills-Wall_Kissing_Cousins.jpg" alt="Bill's Wall">
+          <img loading="lazy" src="/graphics//climbing/sunshine/Bills-Wall_Kissing_Cousins.jpg" alt="Bill's Wall">
           <figcaption>Bill's Wall, Kissing Cousins 5.10b. October 26, 2024.</figcaption>
         </figure>
 
         <!-- Hard Rock -->
         <figure class="album-item" onclick="toggleGallery('hardRockGallery')">
-          <img loading="lazy" src="graphics/climbing/hard-rock/Hard_rock_muffin.jpg" alt="Hard Rock">
+          <img loading="lazy" src="/graphics//climbing/hard-rock/Hard_rock_muffin.jpg" alt="Hard Rock">
           <figcaption>Hard Rock, American Fork, Tasty Muffins. September 6, 2024.</figcaption>
         </figure>
 
         <!-- Indian Creek -->
         <figure class="album-item" onclick="toggleGallery('indianCreekGallery')">
-          <img loading="lazy" src="graphics/climbing/indian-creek/Indian-creek_sparkling_gefilte_fish.jpg" alt="Indian Creek">
+          <img loading="lazy" src="/graphics//climbing/indian-creek/Indian-creek_sparkling_gefilte_fish.jpg" alt="Indian Creek">
           <figcaption>Indian Creek, Sparkling Gefilte Fish 5.10c, November 8, 2022.</figcaption>
         </figure>
       </div>
@@ -79,38 +79,38 @@
     <!-- Hidden Galleries for Each Album -->
     <div class="hidden-gallery", id="vantageCooperJulia">
       <figure>
-        <img loading="lazy" src="graphics/climbing/vant_coop_julia/ike.jpg" alt="ike">
+        <img loading="lazy" src="/graphics//climbing/vant_coop_julia/ike.jpg" alt="ike">
       </figure>
       <figure>
-        <img loading="lazy" src="graphics/climbing/vant_coop_julia/juila.jpg" alt="julia">
+        <img loading="lazy" src="/graphics//climbing/vant_coop_julia/juila.jpg" alt="julia">
       </figure>
       <figure>
-        <img loading="lazy" src="graphics/climbing/vant_coop_julia/cooper.jpg" alt="cooper">
+        <img loading="lazy" src="/graphics//climbing/vant_coop_julia/cooper.jpg" alt="cooper">
       </figure>
     </div>
 
     <div class="hidden-gallery" id="shangriLaGallery">
       <figure>
         <img loading="lazy" 
-             src="graphics/climbing/Shangri-La/Shangri-La_Crouching_Tiger.jpg"
+             src="/graphics//climbing/Shangri-La/Shangri-La_Crouching_Tiger.jpg"
              alt="Shangri-La Image 1">
         <figcaption>Shangri-La, Second View. September 29, 2024.</figcaption>
       </figure>
       <figure>
         <img loading="lazy" 
-             src="graphics/climbing/Shangri-La/damien.jpg" 
+             src="/graphics//climbing/Shangri-La/damien.jpg" 
              alt="Shangri-La Image 2">
         <figcaption>Shangri-La, Top Out. September 29, 2024.</figcaption>
       </figure>
       <figure>
         <img loading="lazy" 
-             src="graphics/climbing/Shangri-La/tree.jpg" 
+             src="/graphics//climbing/Shangri-La/tree.jpg" 
              alt="Shangri-La Image 2">
         <figcaption>Shangri-La, Top Out. September 29, 2024.</figcaption>
       </figure>
       <figure>
         <img loading="lazy" 
-             src="graphics/climbing/Shangri-La/julia.jpg" 
+             src="/graphics//climbing/Shangri-La/julia.jpg" 
              alt="Shangri-La Image 2">
         <figcaption>Shangri-La, Top Out. September 29, 2024.</figcaption>
       </figure>
@@ -119,61 +119,61 @@
     <div class="hidden-gallery" id="vantageHeidiKate">
       <figure>
         <img loading="lazy" 
-             src="graphics/climbing/vantage_heidi_kate/group_sunshine.jpg"
+             src="/graphics//climbing/vantage_heidi_kate/group_sunshine.jpg"
              alt="sunshine">
       </figure>
       <figure>
         <img loading="lazy" 
-             src="graphics/climbing/vantage_heidi_kate/kate_belay_ike.jpg" 
+             src="/graphics//climbing/vantage_heidi_kate/kate_belay_ike.jpg" 
              alt="kate_belay_ike">
       </figure>
       <figure>
         <img loading="lazy" 
-             src="graphics/climbing/vantage_heidi_kate/kate_belay_heidi.jpg" 
+             src="/graphics//climbing/vantage_heidi_kate/kate_belay_heidi.jpg" 
              alt="kate_belay_heidi">
       </figure>
       <figure>
         <img loading="lazy" 
-             src="graphics/climbing/vantage_heidi_kate/group_pitch1.jpg" 
+             src="/graphics//climbing/vantage_heidi_kate/group_pitch1.jpg" 
              alt="group_pitch1">
       </figure>
       <figure>
         <img loading="lazy" 
-             src="graphics/climbing/vantage_heidi_kate/beloggles.jpg" 
+             src="/graphics//climbing/vantage_heidi_kate/beloggles.jpg" 
              alt="beloggles">
       </figure>
       <figure>
         <img loading="lazy" 
-             src="graphics/climbing/vantage_heidi_kate/kate_heidi.jpg" 
+             src="/graphics//climbing/vantage_heidi_kate/kate_heidi.jpg" 
              alt="kate_heidi">
       </figure>
       <figure>
         <img loading="lazy" 
-             src="graphics/climbing/vantage_heidi_kate/good_doggo.jpg" 
+             src="/graphics//climbing/vantage_heidi_kate/good_doggo.jpg" 
              alt="good_doggo">
       </figure>
       <figure>
         <img loading="lazy" 
-             src="graphics/climbing/vantage_heidi_kate/kate_belay.jpg" 
+             src="/graphics//climbing/vantage_heidi_kate/kate_belay.jpg" 
              alt="kate_belay">
       </figure>
     </div>
     <div class="hidden-gallery" id="billsWallGallery">
       <figure>
         <img loading="lazy" 
-             src="graphics/climbing/sunshine/Bills-Wall_Kissing_Cousins.jpg" 
+             src="/graphics//climbing/sunshine/Bills-Wall_Kissing_Cousins.jpg" 
              alt="Bill's Wall Image 1">
         <figcaption>Bill's Wall, Second View. October 26, 2024.</figcaption>
       </figure>
       <figure>
         <img loading="lazy" 
-             src="graphics/climbing/sunshine/cooper_julia.jpg" 
+             src="/graphics//climbing/sunshine/cooper_julia.jpg" 
              alt="Bill's Wall Image 3">
         <figcaption>Bill's Wall, Top Out. October 26, 2022024.</figcaption>
       </figure>
       <figure>
         <img loading="lazy" 
-             src="graphics/climbing/sunshine/selfie.jpg" 
+             src="/graphics//climbing/sunshine/selfie.jpg" 
              alt="Bill's Wall Image 4">
         <figcaption>Bill's Wall, Top Out. October 26, 2022024.</figcaption>
       </figure>
@@ -181,41 +181,41 @@
 
     <div class="hidden-gallery" id="hardRockGallery">
       <figure>
-        <img loading="lazy" src="graphics/climbing/hard-rock/Hard_rock_muffin.jpg">
+        <img loading="lazy" src="/graphics//climbing/hard-rock/Hard_rock_muffin.jpg">
       </figure>
       <figure>
-        <img loading="lazy" src="graphics/climbing/hard-rock/crew.jpg">
+        <img loading="lazy" src="/graphics//climbing/hard-rock/crew.jpg">
       </figure>
       <figure>
-        <img loading="lazy" src="graphics/climbing/hard-rock/croc_action_shot.JPG">
+        <img loading="lazy" src="/graphics//climbing/hard-rock/croc_action_shot.JPG">
       </figure>
       <figure>
-        <img loading="lazy" src="graphics/climbing/hard-rock/ike_wolf.jpg">
+        <img loading="lazy" src="/graphics//climbing/hard-rock/ike_wolf.jpg">
       </figure>
       <figure>
-        <img loading="lazy" src="graphics/climbing/hard-rock/lovato.jpg">
+        <img loading="lazy" src="/graphics//climbing/hard-rock/lovato.jpg">
       </figure>
       <figure>
-        <img loading="lazy" src="graphics/climbing/hard-rock/lovato_flower.jpg">
+        <img loading="lazy" src="/graphics//climbing/hard-rock/lovato_flower.jpg">
       </figure>
       <figure>
-        <img loading="lazy" src="graphics/climbing/hard-rock/sabey.jpg">
+        <img loading="lazy" src="/graphics//climbing/hard-rock/sabey.jpg">
       </figure>
       <figure>
-        <img loading="lazy" src="graphics/climbing/hard-rock/sabey_nate.jpg">
+        <img loading="lazy" src="/graphics//climbing/hard-rock/sabey_nate.jpg">
       </figure>
     </div>
 
     <div class="hidden-gallery" id="indianCreekGallery">
       <figure>
         <img loading="lazy" 
-             src="graphics/climbing/indian-creek/Indian-creek_sparkling_gefilte_fish.jpg" 
+             src="/graphics//climbing/indian-creek/Indian-creek_sparkling_gefilte_fish.jpg" 
              alt="Indian Creek Image 1">
         <figcaption>Indian Creek, Sparkling Gefilte Fish 5.10c. November 8, 2022.</figcaption>
       </figure>
       <figure>
         <img loading="lazy" 
-             src="graphics/climbing/indian-creek/lunar_ecplise.jpg" 
+             src="/graphics//climbing/indian-creek/lunar_ecplise.jpg" 
              alt="Indian Creek Image 2">
         <figcaption>Indian Creek, Lunar Eclipse, November 8, 2022.</figcaption>
       </figure>
