--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
   <meta name="description" content="Ike Griss Salas">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Ike Griss Salas</title>
-  <link rel="stylesheet" href="ike_styles.css" type="text/css" media="all">
+  <link rel="stylesheet" href="/ike_styles.css" type="text/css" media="all">
 </head>
 
 <body style="max-width: 2000px;">
   <div id="outer">
     <nav id="menu">
       <ul>
-        <li><a href="index.html" class="active">home</a></li>
-        <li><a href="research.html">research</a></li>
-        <li><a href="climbing.html">climbing</a></li>
+        <li><a href="/" class="active">home</a></li>
+        <li><a href="/research/">research</a></li>
+        <li><a href="/climbing/">climbing</a></li>
       </ul>
     </nav>
   </div>
