trying hacky fix to remove trailing slash from url link

--- a/index.html
+++ b/index.html
@@ -91,6 +91,6 @@
                   el.href = `mailto:${email}`;
                   el.textContent = email;})();
   </script>
-
+<script src="/js/clean-url.js"></script>
 </body>
 </html>
