fix linking issue

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
         <p>
-          Outside of work I am an avid <a href="./climbing.html">rock climber</a>. I 
+          Outside of work I am an avid <a href="/climbing.html">rock climber</a>. I 
           also enjoy solving rubiks cubes where I regularly compete in 
           <a href="https://www.worldcubeassociation.org/persons/2024SALA23">competitions</a>
           in the pacific northwest. 
