fix: remove zoom from css and adjust scaling. hidden gallery works now

--- a/research.html
+++ b/research.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="ike_styles.css" type="text/css" media="all">
 </head>
 
-<body>
+<body style="max-width: 900px;">
   <div id="outer">
     <nav id="menu">
       <ul>
@@ -20,20 +20,20 @@
   </div>
 
   <main>
-    <section style="text-align: center; margin-top: 40px;">
-      <h1 style="font-size: 50px; font-weight: normal;">Research</h1>
+    <section style="text-align: center; margin-top: 25px;">
+      <h1 style="font-size: 38px; font-weight: normal;">Research</h1>
     </section>
 
     <section style="margin: 20px;">
-      <h2 style="font-size: 30px;">Overview</h2>
-      <p style="font-size: 16px;">
+      <h2 style="font-size: 23px;">Overview</h2>
+      <p style="font-size: 12px;">
         <em>My research focuses on machine learning, optimization, and their applications in environmental science.</em>
       </p>
     </section>
 
     <section style="margin: 20px;">
-      <h2 style="font-size: 30px;">Research Projects</h2>
-      <ul style="font-size: 16px; line-height: 1.8;">
+      <h2 style="font-size: 23px;">Research Projects</h2>
+      <ul style="font-size: 12px; line-height: 1.8;">
         <li>
           <strong>Reduced Order Modeling for Plume Dynamics</strong><br>
           <p style="margin-left: 20px;">Developing fast reduced order modelings for characterizing plume dynamics directly from video data.</p>
@@ -46,8 +46,8 @@
     </section>
 
     <section style="margin: 20px;">
-      <h2 style="font-size: 30px;">Publications</h2>
-      <ul style="font-size: 16px; line-height: 1.8;">
+      <h2 style="font-size: 23px;">Publications</h2>
+      <ul style="font-size: 12px; line-height: 1.8;">
         <li>
           <strong>Coarse Graining and Reduced Order Models for Plume Ejection Dynamics</strong><br>
           Ike Griss Salas, Megan R. Ebers, Jake Stevens-Haas, J. Nathan Kutz<br>
@@ -58,8 +58,8 @@
     </section>
 
     <section style="margin: 20px;">
-      <h2 style="font-size: 30px;">Contact</h2>
-      <p style="font-size: 16px;">
+      <h2 style="font-size: 23px;">Contact</h2>
+      <p style="font-size: 12px;">
         LinkedIn: <a href="https://linkedin.com/in/ike-griss-salas-46a32016a" target="_blank">linkedin.com/in/ike-griss-salas</a><br>
         GitHub: <a href="https://github.com/MalachiteWind" target="_blank">https://github.com/MalachiteWind</a>
       </p>
