--- a/climbing.html
+++ b/climbing.html
@@ -9,7 +9,7 @@
 </head>
 
 <!-- increase max-width manually here -->
-<body style="max-width: 1500px;">
+<body style="max-width: 2000px;">
 
   <div id="outer">
     <nav id="menu">
@@ -22,9 +22,9 @@
   </div>
 
   <main>
-    <section style="text-align: center; margin-top: 40px;">
-      <h1 style="font-size: 50px; font-weight: normal;">Climbing</h1>
-      <p style="font-size: 16px;">
+    <section style="text-align: center; margin-top: 25px;">
+      <h1 style="font-size: 38px; font-weight: normal;">Climbing</h1>
+      <p style="font-size: 12px;">
         Some climbs I have done on <em>
           <a href="https://www.mountainproject.com/user/201838571/ike-griss-salas"
              target="_blank" rel="noopener noreferrer">
@@ -36,7 +36,7 @@
 
     <section>
     <div class="gallery-container">
-      <h2 style="font-size: 30px;">Gallery</h2>
+      <h2 style="font-size: 22px; padding-bottom: 20px;">Gallery</h2>
       <div class="album-grid">
         <!-- Vantage - Cooper and Julia -->
         <figure class="album-item" onclick="toggleGallery('vantageCooperJulia')">
