--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
   </div>
 
   <main>
-    <section style="text-align: center; margin-top: 40px; margin-bottom: 50px;">
-      <h1 style="font-size: 50px; font-weight: normal;">Ike Griss Salas</h1>
+    <section style="text-align: center; margin-top: 25px; margin-bottom: 38px;">
+      <h1 style="font-size: 38px; font-weight: normal;">Ike Griss Salas</h1>
     </section>
 
     <section class="flex-container" style="margin-top: 30px;">
-      <div style="padding-right: 10px;">
+      <div style="padding-right: 1px;">
         <img src="./graphics/department_2_cropped_reduce.jpg" 
              style="width:100%;" 
              loading="lazy" 
              alt="Department photo">
       </div>
       <div>
-        <div class="about-info" style="padding-bottom: 40px;">
-        <h2 style="text-align: left; padding-left: 20px;"> About</h2>
+        <div class="about-info" style="padding-bottom: 30px;">
+        <h2 style="text-align: left; padding-left: 10px; font-size: 20px"> About</h2>
         <p>
           I'm a Ph.D. Candidate in 
           <a href="https://amath.washington.edu/">Applied Mathematics</a> at the
@@ -48,12 +48,12 @@
           Outside of work I am an avid <a href="./climbing.html">rock climber</a>. I 
           also enjoy solving rubiks cubes where I regularly compete in 
           <a href="https://www.worldcubeassociation.org/persons/2024SALA23">competitions</a>
-          in the pacific north west. 
+          in the pacific northwest. 
         </p>
       </div>
 
       <div class="contact-info">
-          <h2 style="text-align: left; padding-left: 20px;">
+          <h2 style="text-align: left; padding-left: 10px; font-size: 20px;">
             Contact Info
           </h2>
         
