nav bar and coloring

--- a/research.html
+++ b/research.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="ike_styles.css" type="text/css" media="all">
 </head>
 
-<body style="max-width: 900px;">
+<body style="max-width: 2000px;">
   <div id="outer">
     <nav id="menu">
       <ul>
@@ -18,8 +18,9 @@
       </ul>
     </nav>
   </div>
+  <hr style="color: aliceblue;"/>
 
-  <main>
+  <main style="max-width: 900px; margin: 0 auto;">
     <section style="text-align: center; margin-top: 25px;">
       <h1 style="font-size: 38px; font-weight: normal;">Research</h1>
     </section>
