--- a/climbing.html
+++ b/climbing.html
@@ -20,6 +20,7 @@
       </ul>
     </nav>
   </div>
+  <hr style="color: aliceblue;"/>
 
   <main>
     <section style="text-align: center; margin-top: 25px;">
