--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="ike_styles.css" type="text/css" media="all">
 </head>
 
-<body>
+<body style="max-width: 2000px;">
   <div id="outer">
     <nav id="menu">
       <ul>
@@ -18,6 +18,7 @@
       </ul>
     </nav>
   </div>
+  <hr style="color: aliceblue;"/>
 
   <main>
     <section style="text-align: center; margin-top: 25px; margin-bottom: 38px;">
