--- a/index.html
+++ b/index.html
@@ -27,23 +27,27 @@
 
     <section class="flex-container" style="margin-top: 30px;">
       <div style="padding-right: 1px;">
-        <img src="./graphics/department_2_cropped_reduce.jpg" 
-             style="width:100%;" 
+        <img src="./graphics/ike-climb.jpg" 
+             style="width:85%;" 
              loading="lazy" 
              alt="Department photo">
       </div>
       <div>
         <div class="about-info" style="padding-bottom: 30px;">
         <h2 style="text-align: left; padding-left: 10px; font-size: 20px"> About</h2>
-        <p>
-          I'm a Ph.D. Candidate in 
+        <!-- <p>
+          I am a postdoc at the University of Utah, in the department of Psychiatry, working with <a href="https://medicine.utah.edu/faculty/nina-de-lacy">Dr. Nina De Lacy</a>. I completed my Ph.D. in 
           <a href="https://amath.washington.edu/">Applied Mathematics</a> at the
              University of Washington, 
-             advised by <a href="https://faculty.washington.edu/kutz/">Dr. J. Nathan Kutz</a>.
-             I work on creating reduced order models for characterizing plume dynamics,
-             as well as optimization methods for model discovery from sparse data
-             observations.
+             advised by <a href="https://faculty.washington.edu/kutz/">Dr. J. Nathan Kutz</a>, where I primarily worked on creating reduced order models for characterizing plume dynamics, model discovery methods from sparse data observations, and feedback control for asymtotically stable systems.
+        </p> -->
+        <p>
+        I am an applied mathematician currently completing a postdoctoral position at the University of Utah in the <a href="https://medicine.utah.edu/psychiatry">Department of Psychiatry</a>, working with <a href="https://medicine.utah.edu/faculty/nina-de-lacy">Dr. Nina De Lacy</a>. 
         </p>
+        <p>
+        I recently completed my Ph.D. in <a href="https://amath.washington.edu/">Applied Mathematics</a> at the University of Washington, advised by <a href="https://faculty.washington.edu/kutz/">Dr. J. Nathan Kutz</a>.   I primarily worked on creating reduced-order models for characterizing plume dynamics, model discovery methods from sparse data observations, and joint work with the Scientific Machine Learning team at <a href="https://www.pnnl.gov/">Pacific North National Lab (PNNL)</a>  on the discovery & feedback control for asymptotically stable systems.
+        </p>
+
 
         <p>
           Outside of work I am an avid <a href="./climbing.html">rock climber</a>. I 
@@ -71,10 +75,10 @@
           </p>  
           <p style="margin-top: 20px;">
           <em>
-            Department of Applied Mathematics<br>
-            University of Washington<br>
-            Lewis Hall 222<br>
-            Seattle, WA 98195
+            Department of Psychiatry<br>
+            University of Utah<br>
+            383 Colorow Drive<br>
+            Salt Lake City, UT 84108
           </em>
           </p>
         </div>
@@ -85,8 +89,8 @@
   </main>
 
   <script>
-    (function () {const user = "grisal";
-                  const domain = "uw.edu";
+    (function () {const user = "ike.griss.salas";
+                  const domain = "utah.edu";
                   const email = `${user}@${domain}`;
                   const el = document.getElementById("email-link");
                   el.href = `mailto:${email}`;
