--- a/index.html
+++ b/index.html
@@ -35,17 +35,12 @@
       <div>
         <div class="about-info" style="padding-bottom: 30px;">
         <h2 style="text-align: left; padding-left: 10px; font-size: 20px"> About</h2>
-        <!-- <p>
-          I am a postdoc at the University of Utah, in the department of Psychiatry, working with <a href="https://medicine.utah.edu/faculty/nina-de-lacy">Dr. Nina De Lacy</a>. I completed my Ph.D. in 
-          <a href="https://amath.washington.edu/">Applied Mathematics</a> at the
-             University of Washington, 
-             advised by <a href="https://faculty.washington.edu/kutz/">Dr. J. Nathan Kutz</a>, where I primarily worked on creating reduced order models for characterizing plume dynamics, model discovery methods from sparse data observations, and feedback control for asymtotically stable systems.
-        </p> -->
+
         <p>
-        I am an applied mathematician currently completing a postdoctoral position at the University of Utah in the <a href="https://medicine.utah.edu/psychiatry">Department of Psychiatry</a>, working with <a href="https://medicine.utah.edu/faculty/nina-de-lacy">Dr. Nina De Lacy</a>. 
+        I am an applied mathematician currently completing a postdoctoral position in the <a href="https://medicine.utah.edu/psychiatry">Department of Psychiatry</a> at the University of Utah working with <a href="https://medicine.utah.edu/faculty/nina-de-lacy">Dr. Nina De Lacy</a>. 
         </p>
         <p>
-        I recently completed my Ph.D. in <a href="https://amath.washington.edu/">Applied Mathematics</a> at the University of Washington, advised by <a href="https://faculty.washington.edu/kutz/">Dr. J. Nathan Kutz</a>.   I primarily worked on creating reduced-order models for characterizing plume dynamics, model discovery methods from sparse data observations, and joint work with the Scientific Machine Learning team at <a href="https://www.pnnl.gov/">Pacific North National Lab (PNNL)</a>  on the discovery & feedback control for asymptotically stable systems.
+        I recently completed my Ph.D. in <a href="https://amath.washington.edu/">Applied Mathematics</a> at the University of Washington, advised by <a href="https://faculty.washington.edu/kutz/">Dr. J. Nathan Kutz</a>.   I primarily worked on creating reduced-order models for characterizing plume dynamics, model discovery methods from sparse data observations, and joint work with the Scientific Machine Learning team at <a href="https://www.pnnl.gov/">Pacific Northwest National Lab (PNNL)</a>  on the discovery & feedback control for asymptotically stable systems.
         </p>
 
 
