--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         I am an applied mathematician currently completing a postdoctoral position in the <a href="https://medicine.utah.edu/psychiatry">Department of Psychiatry</a> at the University of Utah working with <a href="https://medicine.utah.edu/faculty/nina-de-lacy">Dr. Nina De Lacy</a>. 
         </p>
         <p>
-        I recently completed my Ph.D. in <a href="https://amath.washington.edu/">Applied Mathematics</a> at the University of Washington, advised by <a href="https://faculty.washington.edu/kutz/">Dr. J. Nathan Kutz</a>.   I primarily worked on creating reduced-order models for characterizing plume dynamics, model discovery methods from sparse data observations, and joint work with the Scientific Machine Learning team at <a href="https://www.pnnl.gov/">Pacific Northwest National Lab (PNNL)</a>  on the discovery & feedback control for asymptotically stable systems.
+        I recently completed my Ph.D. in <a href="https://amath.washington.edu/">Applied Mathematics</a> at the University of Washington, advised by <a href="https://faculty.washington.edu/kutz/">Dr. J. Nathan Kutz</a>.   I primarily worked on creating reduced-order models for characterizing plume dynamics, model discovery methods from sparse data observations, and joint work with the Scientific Machine Learning team at <a href="https://www.pnnl.gov/">Pacific Northwest National Lab (PNNL)</a>  on the discovery & feedback control for asymptotically stable dynamical systems.
         </p>
 
 
