--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </a>
           </p>   
           <p>LinkedIn: 
-            <a href="https://linkedin.com/in/ike-griss-salas">ike-griss-salas</a>
+            <a href="https://www.linkedin.com/in/ike-griss-salas-46a32016a/">ike-griss-salas</a>
           </p>  
           <p style="margin-top: 20px;">
           <em>
