update nina website

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h2 style="text-align: left; padding-left: 10px; font-size: 20px"> About</h2>
 
         <p>
-        I am an applied mathematician currently completing a postdoctoral position in the <a href="https://medicine.utah.edu/psychiatry">Department of Psychiatry</a> at the University of Utah working with <a href="https://medicine.utah.edu/faculty/nina-de-lacy">Dr. Nina De Lacy</a>. 
+        I am an applied mathematician currently completing a postdoctoral position in the <a href="https://medicine.utah.edu/psychiatry">Department of Psychiatry</a> at the University of Utah working with <a href="https://ninadelacy.org/">Dr. Nina De Lacy</a> on foundation models for wearable sensors. 
         </p>
         <p>
         I recently completed my Ph.D. in <a href="https://amath.washington.edu/">Applied Mathematics</a> at the University of Washington, advised by <a href="https://faculty.washington.edu/kutz/">Dr. J. Nathan Kutz</a>.   I primarily worked on creating reduced-order models for characterizing plume dynamics, model discovery methods from sparse data observations, and joint work with the Scientific Machine Learning team at <a href="https://www.pnnl.gov/">Pacific Northwest National Lab (PNNL)</a>  on the discovery & feedback control for asymptotically stable dynamical systems.
