test old deployment of research page

--- a/research/index.html
+++ b/research/index.html
@@ -28,8 +28,7 @@
     <section style="margin: 20px;">
       <h2 style="font-size: 23px;">Overview</h2>
       <p style="font-size: 12px;">
-        <em>Data driven machine learning. Modeling and discovery of dynamical systems.</em>
-        <!-- <em>My research focuses on machine learning, optimization, and their applications in environmental science.</em> -->
+        <em>My research focuses on machine learning, optimization, and their applications in environmental science.</em>
       </p>
     </section>
 
@@ -37,35 +36,24 @@
       <h2 style="font-size: 23px;">Research Projects</h2>
       <ul style="font-size: 12px; line-height: 1.8;">
         <li>
-          <strong>Foundation Models for Multiscale Digital Phenotypic Data Streams</strong><br>
-          <p style="margin-left: 20px;">Adapting and applying dynamical systems learning in foundation models for wearable sensors. </p>
-        </li>
-
-        <li>
-          <strong>Sparse Identification of Nonlinear Dynamics</strong><br>
-          <p style="margin-left: 20px;">Developing a new model learning architecture inspired by the widely used (two-step) <i>Sparse Identification of Nonlinear Dynamics</i> (SINDy) that learns a model in scenarios of extremely scarce or noisy data measurements.</p>
-        </li>
-        <li>
           <strong>Reduced Order Modeling for Plume Dynamics</strong><br>
           <p style="margin-left: 20px;">Developing fast reduced order modelings for characterizing plume dynamics directly from video data.</p>
         </li>
-
+        <li>
+          <strong>Joint SINDy</strong><br>
+          <p style="margin-left: 20px;">Developing a new model learning architecture inspired by the widely used (two-step) <i>Sparse Identification of Nonlinear Dynamics</i> (SINDy) that learns a model in scenarios of extremely scarce or noisy data measurements.</p>
+        </li>
       </ul>
     </section>
 
     <section style="margin: 20px;">
       <h2 style="font-size: 23px;">Publications</h2>
-            <ul style="font-size: 12px; line-height: 1.8;">
-        <li>
-          <strong>A joint optimization approach to identifying sparse dynamics using least squares kernel collocation. </strong> 2025 [<a href="https://arxiv.org/abs/2511.18555" target="_blank" rel="noopener noreferrer">arXiv</a>]
-          <br> Alexander W. Hsu, Ike Griss Salas, Jacob M. Stevens-Haas, J. Nathan Kutz, Aleksandr Aravkin, Bamdad Hosseini<br>
-        </li>
-      </ul>
-
       <ul style="font-size: 12px; line-height: 1.8;">
         <li>
-          <strong>Data-driven coarse-graining and reduced-order modeling of plume ejection dynamics from video observations. </strong>Physics of Fluids 37, 107145 (2025) [<a href="https://www.arxiv.org/abs/2503.04690" target="_blank" rel="noopener noreferrer">arXiv</a>][<a href="https://pubs.aip.org/aip/pof/article/37/10/107145/3368411/Data-driven-coarse-graining-and-reduced-order" target="_blank" rel="noopener noreferrer">Journal</a>]
-          <br> Ike Griss Salas, Megan R. Ebers, Jake Stevens-Haas, J. Nathan Kutz<br>
+          <strong>Coarse Graining and Reduced Order Models for Plume Ejection Dynamics</strong><br>
+          Ike Griss Salas, Megan R. Ebers, Jake Stevens-Haas, J. Nathan Kutz<br>
+          <em>arXiv preprint arXiv:2503.04690 (2025)</em><br>
+          <a href="https://arxiv.org/abs/2503.04690" target="_blank" rel="noopener noreferrer">Read on arXiv</a>
         </li>
       </ul>
     </section>
